--- a/zamboni-resume.org
+++ b/zamboni-resume.org
@@ -55,7 +55,7 @@
 #+homepage: zzamboni.org
 
 #+latex: \begin{cvparagraph}
-I am a Senior Engineering Manager, IT Architect and Researcher with 29 years of experience building systems and leading teams in startups as well as big companies. I have experience working with and leading remote teams. I possess a strong combination of leadership, conceptual and technical skills with excellent communication abilities. I am a generalist but specialize in the areas of Computer Security, Cloud Computing and Configuration Management.
+I am a Senior Engineering Manager, IT Architect and Researcher with 29 years of experience building systems and leading teams in startups as well as big companies. I have experience working with and leading remote teams. I possess a strong combination of leadership, conceptual and technical skills with excellent communication abilities. I specialize in the areas of Computer Security, Cloud Computing and Configuration Management.
 #+latex: \end{cvparagraph}
 
 * Including private information :noexport:
@@ -115,7 +115,7 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
   - [[#literate-configuration][Literate Configuration]]
   - [[#learning-hammerspoon][Learning Hammerspoon]]
   - [[#learning-cfengine][Learning CFEngine]]
-- [[#research-publications-and-references][Research, Publications, and References]]
+- [[#research-publications-teaching-and-references][Research, Publications, Teaching and References]]
 
 * Key skills
 :PROPERTIES:
@@ -127,7 +127,7 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 - Communications and Research :: Excellent written and spoken communication skills, with more than 30 years of written and spoken communication, research and teaching experience.
 - Systems and Development :: Unix/Linux systems engineering and administration, system health management and monitoring, cloud platforms (Amazon, Cloud Foundry, VMware), software development experience (Ruby, Python, C, Perl, LISP, etc.).
 - Configuration management :: CFEngine, Ansible, Puppet.
-- Languages :: Spanish (native), English (100%), German (60% - B1 level).
+- Languages :: Spanish (native), English (100%), German (B1 level).
 
 * Experience
 :PROPERTIES:
@@ -147,10 +147,10 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 :FROM: <2019-04-01>
 :END:
 
-- As a Solution Security Architect for IT Clouds...
+- As a Solution Security Architect for IT Clouds:
   - I define and manage the security features and characteristics of [[https://www.swisscom.ch/en/business/enterprise/offer/cloud-data-center.html][Swisscom's cloud offerings]], as a member of the /Swisscom IT Clouds/ leadership team.
-  - I maintain cloud platform and service compliance with internal, contractual and regulatory standards (e.g. [[https://www.swisscom.ch/en/about/company/governance/riskmanagement/iso-iec-managementsystem.html][ISO27001]], ISAE3402/3000, FINMA and GDPR).
-  - I established /Security Champions/ initiative to promote and improve a culture of security responsibility.
+  - I work with product managers, engineering teams and the corporate security group to maintain cloud platform and service compliance with internal, contractual and regulatory standards (e.g. [[https://www.swisscom.ch/en/about/company/governance/riskmanagement/iso-iec-managementsystem.html][ISO27001]], ISAE3402/3000, FINMA and GDPR).
+  - I established and manage the /Security Champions/ initiative to promote and improve a culture of security responsibility.
   - I established organization-wide processes for risk management, threat modeling, audits and penetration testing.
   - I am the point of contact for CISO-level interactions with Swisscom's cloud customers.
 - As an Enterprise Architect, I define future Swisscom products and solutions as part of the /Swisscom Enterprise Architecture/ team.
@@ -162,13 +162,13 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 :TO: <2019-04-01>
 :END:
 
-- Starting as a project lead and architect, I established and managed a team of up to 16 engineers that designed, implemented and operated monitoring and logging capabilities for Swisscom's IaaS and PaaS cloud offerings.
-- Unified platform and service monitoring components into one cohesive pipeline, reducing costs and increasing efficiency by 20%.
-- Defined architecture and oversaw implementation of customer-facing monitoring and logging services.
-- Designed and implemented the initial version of the /Orchard/ monitoring platform for Swisscom's [[https://www.swisscom.ch/en/business/enterprise/offer/cloud-data-center/application-cloud/enterprise-application-cloud.html][/Application Cloud/]].
-- Defined and implemented integrations between Jira and OpsGenie for alerting of user-reported incidents.
-- Managed business relationship and technical implementation of OpsGenie for alert management in IT Clouds.
-- Managed engineering relationship with VMware for integration of their products in Swisscom's monitoring systems.
+- Starting as a project lead and architect, I founded and led a team of up to 16 people that designed, implemented and operated the monitoring and logging capabilities for Swisscom's IaaS and PaaS cloud offerings.
+  - Unified diverse monitoring components into a cohesive framework, reducing costs and increasing efficiency by 20%.
+  - Defined architecture and implementated customer-facing monitoring and logging services.
+  - Designed and implemented the [[https://cfsummit2016.sched.com/event/6aQ2/chaos-heidi-vs-orchard-self-disruption-and-healing-in-a-cloud-foundry-based-service-environment-diego-zamboni-swisscom-bill-chapman-stark-wayne][/Orchard/]] monitoring platform for Swisscom's [[https://www.swisscom.ch/en/business/enterprise/offer/cloud-data-center/application-cloud/enterprise-application-cloud.html][/Application Cloud/]].
+  - Defined and implemented integrations between Jira and OpsGenie for alerting of user-reported incidents.
+  - Managed business relationship and implementated Swisscom-wide use of OpsGenie for alert management.
+  - Managed engineering relationship with VMware for integration of their products in Swisscom's monitoring systems.
 
 ** [[https://cfengine.com/][CFEngine AS]]
 :PROPERTIES:
@@ -185,11 +185,11 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 :TO: <2014-06-30>
 :END:
 
-- Participated in the development of the CFEngine language roadmap and security strategy.
-- Overall CFEngine Advocate, with a special focus on security.
+- Developed the CFEngine language roadmap and security strategy.
+- Acted as overall CFEngine Advocate, with a special focus on security.
 - Gave talks, wrote articles and blog posts, taught classes, and in general spread the word about CFEngine.
-- Published and promoted book [[http://cf-learn.info/][Learning CFEngine]] (O'Reilly Media).
-- Established and led the [[http://cfengine.com/cfengine-design-center/][CFEngine Design Center]] project through its initial implementation phase.
+- Published the book [[http://cf-learn.info/][Learning CFEngine]] (O'Reilly Media), which was used for promotion and education.
+- Established and led the [[https://docs.cfengine.com/docs/3.10/guide-design-center.html][/CFEngine Design Center/]] project through its initial implementation phase.
 
 ** [[https://www.hpe.com/][HP Enterprise Services]]
 :PROPERTIES:
@@ -206,11 +206,11 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 :TO: <2011-10-01>
 :END:
 
-- First point of contact for security-related issues for HP enterprise customers in Mexico, some of them with international presence.
+- Managed security-related topics for HP enterprise customers in Mexico.
 - Initiated, advised and managed security-related projects.
-- Handled communication and coordination between technical teams involved in security initiatives.
-- Oversaw all security-related aspects of the design, implementation and delivery of IT Outsourcing projects.
-- Performed analysis, design and implementation of solutions in multiple areas of expertise, including system automation, configuration management, system administration, system design, virtualization, performance and security.
+- Coordinated communication among technical teams involved in security initiatives.
+- Managed all security-related aspects of the design, implementation and delivery of IT Outsourcing projects.
+- Analyzed, designed and implementated solutions in the areas of system automation, configuration management, system administration, system design, virtualization, performance and security.
 
 ** [[https://www.zurich.ibm.com/][IBM Zurich Research Lab]]
 :PROPERTIES:
@@ -227,7 +227,7 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 :TO:       <2009-10-01>
 :END:
 
-- I worked in various research projects in intrusion detection, malware containment, and virtualization security, including:
+- Established and participated in research projects in intrusion detection, malware containment, and virtualization security, including:
   - [[http://www-03.ibm.com/press/us/en/pressrelease/23833.wss][/Project Phantom/]]: Security for VMware virtual environments using virtual machine introspection.
   - [[http://domino.research.ibm.com/library/cyberdig.nsf/1e4115aea78b6e7c85256b360066f0d4/d7c39a9a2e73d870852570060051dfed?OpenDocument][/Billy Goat/]]: An active worm-detection and capture system, deployed in the IBM internal and external networks.
   - [[http://www.usenix.org/event/sruti07/tech/full_papers/zamboni/zamboni.pdf][/Router-based Billy Goat/]]: An active worm-capture device deployed at the network boundary and coupled with a border router to effectively and automatically spoof every unused IP address outside the local network.
@@ -269,8 +269,8 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 - Established UNAM's first [[http://www.seguridad.unam.mx/][Intrusion Response Team]], which has since evolved into a much larger organization.
 - Supervised up to nine people working on different projects related to computer security.
 - Supervised and participated in the direct monitoring of the security of a Cray supercomputer and 22 Unix workstations.
-- Provided security services to the whole University, including incident response, security information, auditing and teaching.
-- Established the celebration of the /International Computer Security Day/ (sponsored by the Association for Computing Machinery) at UNAM.  Acted as the main organizer of the event for two years (1994 and 1995). This event has grown and divided into the /Computer Security Day/ (a one-day event) and the /Seguridad en Cómputo/ (Computer Security) conference (a multi-day event).
+- Managed security services for the whole University, including incident response, security information, auditing and teaching.
+- Established the /International Computer Security Day/ (sponsored by the Association for Computing Machinery) at UNAM.  Acted as the main organizer of the event for two years (1994 and 1995). This event has grown and divided into the /Computer Security Day/ (a one-day event) and the /Seguridad en Cómputo/ (Computer Security) conference (a multi-day event).
 - Designed and headed development of an audit-analysis tool for Unix systems (SAINT).
 
 *** System Administrator
@@ -337,7 +337,7 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 :DATE: O’Reilly Media 2012, Self-published 2017
 :END:
 
-* Research, Publications, and References
+* Research, Publications, Teaching and References
 
 #+latex: \begin{cvparagraph}
 Available upon request.
