Updated paper URLs, updated HTML and TXT exports

--- a/zamboni-pubs.bib
+++ b/zamboni-pubs.bib
@@ -115,7 +115,7 @@
   address      = {West Lafayette, IN},
   month        = aug,
   note         = {{CERIAS} {TR} 2001-42},
-  url          = {https://zzamboni.org/files/theses/zamboni-phd-thesis.pdf},
+  url          = {https://www.cerias.purdue.edu/apps/reports_and_papers/view/1800},
   keywords     = {thesis},
 }
 
@@ -256,7 +256,7 @@
   month        = dec,
   pages        = {13--24},
   publisher    = {{IEEE} Computer Society},
-  url          = "http://zzamboni.org/diego/pubs/aafid-acsac98.pdf",
+  url          = "http://zzamboni.org/files/pubs/aafid-acsac98.pdf",
   keywords     = {refereed},
 }
 
@@ -271,7 +271,7 @@
   pages        = {208--223},
   organization = {{IEEE} Computer Society},
   publisher    = {{IEEE} Computer Society Press},
-  URL          = "http://homes.cerias.purdue.edu/~zamboni/pubs/synkill.pdf",
+  URL          = "https://www.cerias.purdue.edu/apps/reports_and_papers/view/605",
   keywords     = {refereed},
 }
 
@@ -283,7 +283,7 @@
   year         = 1996,
   month        = may,
   address      = {Washington, D.C.},
-  url          = "http://homes.cerias.purdue.edu/~zamboni/pubs/SAINT.pdf",
+  url          = "http://zzamboni.org/files/pubs/SAINT.pdf",
   keywords     = {refereed},
 }
 
@@ -311,7 +311,7 @@
   type         = {{CERIAS} Technical Report},
   institution  = {CERIAS, Purdue University},
   address      = {West Lafayette, IN},
-  URL          = "http://homes.cerias.purdue.edu/~zamboni/pubs/prelim.pdf",
+  URL          = "https://www.cerias.purdue.edu/apps/reports_and_papers/view/581",
   keywords     = {techreport},
 }
 
@@ -324,7 +324,7 @@
   type         = {{CERIAS} Technical Report},
   institution  = {CERIAS, Purdue University},
   address      = {1315 Recitation Building, West Lafayette, IN},
-  URL          = "http://homes.cerias.purdue.edu/~zamboni/pubs/2000-08.pdf",
+  URL          = "https://www.cerias.purdue.edu/apps/reports_and_papers/view/1842",
   keywords     = {techreport},
 }
 
@@ -337,7 +337,7 @@
   number       = {98-05},
   type         = {Technical Report},
   institution  = {{COAST} Laboratory, Purdue University},
-  URL          = {http://homes.cerias.purdue.edu/~zamboni/pubs/tr9805.pdf},
+  URL          = {https://www.cerias.purdue.edu/apps/reports_and_papers/view/65},
   keywords     = {techreport},
 }
 
@@ -383,7 +383,7 @@
                   ({RAID2000})},
   month        = oct,
   year         = 2000,
-  URL          = {http://homes.cerias.purdue.edu/~zamboni/pubs/sensors-raid2000.pdf},
+  URL          = {http://zzamboni.org/files/pubs/sensors-raid2000.pdf},
   keywords     = {presentations},
 }
 
@@ -394,7 +394,7 @@
   month        = jul,
   howpublished = {Presented at The Perl Conference 4.0},
   address      = {Monterey, CA},
-  URL          = {http://homes.cerias.purdue.edu/~zamboni/pubs/tpc40.pdf},
+  URL          = {http://zzamboni.org/files/pubs/tpc40.pdf},
   keywords     = {presentations},
 }
 
@@ -407,6 +407,7 @@
   month        = sep,
   address      = {West Lafayette, IN},
   note         = {Online proceedings, available at \url{http://www.raid-symposium.org/raid99/}},
+  URL          = {https://www.cerias.purdue.edu/apps/reports_and_papers/view/3487},
   keywords     = {presentations},
 }
 
@@ -440,7 +441,7 @@
   howpublished = {Keynote talk, presented at the 2011 Computer Security Congress in Mexico City},
   month        = nov,
   year         = 2011,
-  url          = {http://blog.zzamboni.org/security-in-the-third-wave-of-it-engineering},
+  url          = {https://zzamboni.org/post/security-in-the-third-wave-of-it-engineering/},
   keywords     = {invited},
 }
 
