Added missing month.

--- a/zamboni-pubs.bib
+++ b/zamboni-pubs.bib
@@ -59,6 +59,7 @@
   volume       = 51,
   number       = 5,
   year         = 2007,
+  month        = apr,
   issn         = {1389-1286},
   publisher    = {Elsevier North-Holland, Inc.},
   address      = {New York, NY, USA},
